Botones campana y usuario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
+<p-menubar>
+    <button class="button">
+        <i class="pi pi-bell" size="medium" pBadge value="2" severity="danger"></i>
+    </button>
 
 
-  <p-menubar>
-    <button pButton pRipple type="button" icon="pi pi-bell" class="p-button-rounded p-button-info"></button>
-    <button pButton pRipple type="button" icon="pi pi-user" class="p-button-rounded p-button-info"></button>
-  </p-menubar>
+    <button pButton pRipple type="button"  icon="pi pi-user" class="p-button-rounded p-button-text p-button-plain"></button>
 
-
+</p-menubar>
+  
+  
